-added question to response to show on admin side

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,9 @@ input[type="text"] {
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
 }
+.response-text {
+    font-size: 12pt;
+}
 .loader::after {
     content: "";
     box-sizing: border-box;
