--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -2,53 +2,53 @@
     font-family: "Outfit";
     src: url("../fonts/Outfit-Black.otf");
     font-weight: 900;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: "Outfit";
     src: url("../fonts/Outfit-ExtraBold.otf");
     font-weight: 800;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: "Outfit";
     src: url("../fonts/Outfit-Bold.otf");
     font-weight: 700;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: "Outfit";
     src: url("../fonts/Outfit-SemiBold.otf");
     font-weight: 600;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: "Outfit";
     src: url("../fonts/Outfit-Medium.otf");
     font-weight: 500;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: "Outfit";
     src: url("../fonts/Outfit-Regular.otf");
     font-weight: 400;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: "Outfit";
     src: url("../fonts/Outfit-Light.otf");
     font-weight: 300;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: "Outfit";
     src: url("../fonts/Outfit-ExtraLight.otf");
     font-weight: 200;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: "Outfit";
     src: url("../fonts/Outfit-Thin.otf");
     font-weight: 100;
-    font-display: swap;
+    font-display: block;
 }
