-increased font weight on a tag

--- a/src/index.scss
+++ b/src/index.scss
@@ -121,6 +121,7 @@ a {
     font-family: "Outfit" !important;
     color: $cwGreen !important;
     text-decoration: none !important;
+    font-weight: 500;
 }
 a:focus-visible {
     outline: none !important;
