-fixed background of splahy to fir with loading

--- a/src/index.scss
+++ b/src/index.scss
@@ -90,13 +90,13 @@ dialog {
 }
 /// LANDING PAGE
 .floating {
-    color: $bgGreen;
+    color: white;
     background-image: url("images/splashBG.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     position: absolute;
-    background-color: white;
+    background-color: $bgGreen;
     z-index: 1;
     height: 100%;
     width: 100%;
@@ -559,7 +559,7 @@ a:focus-visible {
     }
     100% {
         opacity: 0;
-        z-index: 11;
+        z-index: -1;
     }
 }
 
@@ -574,7 +574,7 @@ a:focus-visible {
     }
     100% {
         opacity: 0;
-        z-index: 11;
+        z-index: -1;
     }
 }
 
@@ -593,7 +593,7 @@ a:focus-visible {
     }
     100% {
         opacity: 0;
-        z-index: 11;
+        z-index: -1;
     }
 }
 
@@ -608,7 +608,7 @@ a:focus-visible {
     }
     100% {
         opacity: 0;
-        z-index: 11;
+        z-index: -1;
     }
 }
 
@@ -623,7 +623,7 @@ a:focus-visible {
     }
     100% {
         opacity: 0;
-        z-index: 11;
+        z-index: -1;
     }
 }
 
